entity_macros/tests/ui/attribute/unsupported-unit-struct.rs
use entity::{include_ent_core, Ent};

#[include_ent_core]
#[derive(Clone, Ent)]
pub struct SimpleEnt;

fn main() {}
